cmake_minimum_required(VERSION 3.0.2)
project(kbot_slam)

find_package(catkin REQUIRED)

################################################
## Declare ROS messages, services and actions ##
################################################

###########
## Build ##
###########

#############
## Install ##
#############

#############
## Testing ##
#############
