<?xml version="1.0"?>
<package format="2">
  <name>kbot_slam</name>
  <version>1.0.1</version>
  <description>
    KBOT SLAM: Using Hector Slam for this package
  </description>
  <maintainer email="james.ttpts@gmail.com">Thitipong T.</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
